refactor opening graf

--- a/writing/spp/generics-spp.tex
+++ b/writing/spp/generics-spp.tex
@@ -61,15 +61,16 @@
 
 \maketitle
 
-Learning and development require solving problems of induction.
-These are hard problems though they can be solved by adults and young children with observational learning \cite{Markman1989} 
-and in pedagogically enriched scenarios \emph{(CITE SOME PEDAGOGY}).
-At about age of the two, a new tool for communication and learning is available: language.
-
-Generalizations are central to human understanding and thus, it is not surprising that language provides a simple and ubiquitous way to communicate these generalizations. 
-Generic language (e.g.~\emph{Swans are white.}) convey generalizations about categories \cite{Carlson1977, Leslie2008}. 
-Generics are ubiquitous in everyday conversation as well as in child-directed speech \cite{Gelman2008}, and children as young as two or three understand that generics refer to categories and support generalization \cite{Cimpian2008}.
-They are thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}, and yet a formal account of generic meaning remains elusive. 
+Learning and development require t solving problems of induction.
+These are hard problems though they can be solved by adults and young children by learning from observations \cite{Markman1989} 
+and in pedagogically enriched scenarios \emph{(CITE SOME PEDAGOGY?}).
+%At about age of the two, a new tool for communication and learning becomes available: language.
+Generalizations may also be conveyed with language.
+Generic language (e.g.~\emph{Swans are white.}) provides a simple and ubiquitous way to communicate generalizations \cite{Carlson1977, Leslie2008}, and generic language is ubquitous in everyday conversation and in child-directed speech \cite{Gelman2008}. 
+At around the age of two, children can understand that generics refer to categories and support generalization \cite{Cimpian2008}.
+%Generalizations are central to human understanding and thus, it is not surprising that language provides . 
+%Generics are ubiquitous in everyday conversation as well as in child-directed speech and children as young as two or three 
+Learning through generic statements is thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}, and yet a formal account of what generic sentences mean remains elusive. 
 
 The primary hurdle in formalizing generic language ) is in determine what makes a generic sentence true or false (i.e. the truth conditions).
 Generics look a lot like quantifier statements (e.g. \emph{some, all, most}).
